# safe-win-api

./: Cargo.toml  README.md
.github/workflows/: clippy-check.yml
lib/win-api-wrapper/: Cargo.toml  README.md
lib/win-api-wrapper/src/: common.rs  core.rs  lib.rs  macros.rs  win32.rs
lib/win-api-wrapper/src/core/: error.rs
lib/win-api-wrapper/src/docs/: API.md
lib/win-api-wrapper/src/win32/: core.rs  foundation.rs  security.rs  system.rs  ui.rs
lib/win-api-wrapper/src/win32/system/: com.rs  diagnostics.rs  kernel.rs  library_loader.rs  memory.rs  power.rs  process_status.rs  registry.rs  system_services.rs  threading.rs  time.rs
lib/win-api-wrapper/src/win32/system/diagnostics/: debug.rs  toolhelp.rs
lib/win-api-wrapper/src/win32/system/power/: device.rs  info.rs  notify.rs  policy.rs  scheme.rs
lib/win-api-wrapper/src/win32/system/threading/: process.rs  thread.rs
lib/win-api-wrapper/src/win32/ui/: messaging.rs  shell.rs  window.rs
lib/win-api-wrapper/src/win32/ui/shell/: drag.rs
src/: com.rs  diagnostics.rs  kernel.rs  lib.rs  messaging.rs  process.rs  registry.rs  rename_to_lib.rs  shell.rs  thread.rs  window.rs
src/common/: handle.rs  snapshot.rs
